# mtgx2nx

./: LICENSE  README.md  requirements.txt  setup.cfg
mtgx2nx/: __init__.py  parser.py
