[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[bdist_wheel]
universal = 1

[metadata]
name = mtgx2nx
version = 0.0.1
author = Woniuke
author_email = liutonggit@163.com
license=MIT
description=Maltego file transformer, Using networkx.
long_description = file: README.md
long_description_content_type = text/markdown
url=https://github.com/Woniuke/mtgx2nx/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
include_package_data = True
zip_safe=False
